--- a/styles/App.css
+++ b/styles/App.css
@@ -39,12 +39,11 @@
   -webkit-text-fill-color: transparent;
 }
 
-.button-container{
+.button-container {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  
 }
 .cta-button {
   height: 45px;
@@ -79,7 +78,7 @@ button:disabled {
   color: #333;
 }
 
-.item-image{
+.item-image {
   height: 100px;
 }
 
@@ -131,11 +130,12 @@ button:disabled {
   border-radius: 3px;
   padding: 8px 16px;
   cursor: pointer;
+  min-width: 85px;
 }
 
 .download-button {
   border: none;
-  background-color: #4664ff;
+  background-color: #297e02;
   color: #fff;
   font-size: 16px;
   border-radius: 3px;
@@ -143,7 +143,7 @@ button:disabled {
   cursor: pointer;
 }
 
-.create-product-button{
+.create-product-button {
   margin: 10px;
   border: 0;
   font-size: 20px;
@@ -152,14 +152,15 @@ button:disabled {
   top: 20px;
   right: 20px;
   cursor: pointer;
-  color:white;
+  color: white;
   background-color: transparent;
   transition: all 0.3s ease;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   z-index: 1;
 }
 
-.products-container{
+.products-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
