--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,30 +1,31 @@
-.product_container{
+.product_container {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   max-width: 320px;
-  height: 400px;
+  min-width: 300px;
   background-color: #141414;
   margin: 15px;
   padding: 20px;
-  border-radius: 16px;
+  border-radius: 7.5px;
   border: 1px solid rgb(104, 104, 104);
   /* background: url('../public/blur-bg.png') */
 }
 
-.product_image{
-  width: 140px;
+.product_image {
+  width: 200px;
+  height: 200px;
   background-color: #141414;
 }
 
-.product_details{
+.product_details {
   display: flex;
   flex-direction: column;
   max-width: 95%;
 }
 
-.product_text{
+.product_text {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,23 +33,25 @@
   margin-bottom: 30px;
 }
 
-.product_title{
+.product_title {
   font-size: 1.25rem;
   font-weight: bold;
+  margin-top: 20px;
   margin-bottom: 12px;
 }
-.product_description{
-  color:rgb(186, 184, 184);
+.product_description {
+  color: rgb(186, 184, 184);
 }
 
-.product_action{
+.product_action {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 30px;
 }
 
-.product_price{
+.product_price {
   font-size: 1.3em;
 }
