--- a/styles/App.css
+++ b/styles/App.css
@@ -41,28 +41,27 @@
 
 .button-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
 }
-.cta-button {
-  height: 45px;
-  border: 0;
-  width: auto;
-  padding-left: 40px;
-  padding-right: 40px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-}
 
-.connect-wallet-button {
+.wallet-adapter-button.connect-wallet-button {
   color: white;
   background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
-  max-width: 300px;
+  height: 40px;
+  border: none;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  border-radius: 3px;
+  padding: 8px 16px;
+  cursor: pointer;
+  min-width: 85px;
 }
 
 .mint-button {
@@ -118,19 +117,19 @@ button:disabled {
   margin: 50px auto;
 }
 
-.connected-container button {
-  height: 50px;
-}
-
 .buy-button {
   border: none;
   background-color: #4664ff;
   color: #fff;
   font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   border-radius: 3px;
   padding: 8px 16px;
   cursor: pointer;
   min-width: 85px;
+  height: 40px;
 }
 
 .download-button {
